# credit-risk-ml-engineering

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/credit_risk_ml/: api.py  data.py  features.py  model.py  train.py
tests/: test_features.py
